Ensure dark theme doesn't overflow Y size

--- a/static/explorer.css
+++ b/static/explorer.css
@@ -20,6 +20,7 @@
 .navbar {
     border-radius: 0;
     margin-bottom: 2px;
+    height: 50px; /* needed to override the darkly settings */
 }
 
 #lang-dropdown {
